2008-01-28  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/Makefile.am:

	Recreating svnversion.h only when a source file has changed.

2008-01-18  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/via_dri.c: (VIAInitVisualConfigs):

	Condensing an unneeded code duplication.

2008-01-11  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/openchrome.man:
	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit):

	Removing the redundant HWCursor option.

2008-01-10  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/openchrome.man: Tweaking the text, clarifying the effect
	of an option, giving the default value.

2008-01-08  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/via_accel.c: (viaBitExpandHelper), (viaPixelARGB8888):

	Moving a little more computation into the helper function.

2007-10-29  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/via_driver.c: (VIAPreInit):

	Redoing the second change of June 10:  Printing VideoRAM again
	only when it's actually been probed; plus further tiny code
	cleanups: comments, line wraps, whitespace.

2007-10-29  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/via_driver.c: (VIAPreInit):

	Redoing the first change of June 10:  Putting the chipset and
	revision print statements together at the beginning; moving
	the reading of the VideoRAM option to after X has parsed the
	config file; plus a few small layout tweaks.

2007-10-05  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_swov.c: (Upd_Video):

	Enable colorkey on secondary.

2007-10-03  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_driver.c: (VIAPreInit):

	Fix memory detection for P4M900 and CX700.

2007-09-12  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_bios.h:
	* src/via_driver.c: (VIAWriteMode), (VIAAdjustFrame),
	(VIASwitchMode):
	* src/via_mode.c: (ViaModeSecondaryVGAFetchCount),
	(ViaModeSecondaryVGAOffset), (ViaModeSecondaryVGA):